--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -197,7 +197,7 @@
       <div class="logo">PORTFOLIO</div>
       <div class="nav-links">
         <a href="../index.html">Home</a>
-        <a href="../index.html#blogs">Blogs</a>
+        <a href="../index.html#blog">Blogs</a>
       </div>
     </div>
   </nav>
@@ -430,7 +430,7 @@
     </div>
 
     <div class="blog-footer">
-      <a href="../index.html#blogs">← Back to Blog</a>
+      <a href="../index.html#blog">← Back to Blog</a>
       <a href="https://www.linkedin.com/in/kostanca-kovaci" target="_blank">Connect on LinkedIn</a>
     </div>
 
