--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -219,7 +219,7 @@
       <div class="logo">PORTFOLIO</div>
       <div class="nav-links">
         <a href="../index.html">Home</a>
-        <a href="../index.html#blogs">Blogs</a>
+        <a href="../index.html#blog">Blogs</a>
       </div>
     </div>
   </nav>
@@ -308,7 +308,7 @@
       <p>So stop collecting certificates and start building. Your future self, looking back at your first completed project, will thank you.</p>
 
       <div class="blog-footer">
-        <a href="../index.html#blogs">← Back to Blog</a>
+        <a href="../index.html#blog">← Back to Blog</a>
         <a href="https://www.linkedin.com/in/kostanca-kovaci" target="_blank">Connect on LinkedIn</a>
       </div>
 
