--- a/projects/all-projects.html
+++ b/projects/all-projects.html
@@ -95,7 +95,7 @@
         <img src="../images/Netflix-EDA.png" class="project-image">
         <div class="project-content">
           <h3>Netflix Content EDA</h3>
-          <p>ARIMA & LSTM forecasting models.</p>
+          <p>Exploratory Analysis of Netflix Content and Viewing Patterns.</p>
         </div>
       </div>
 
@@ -104,7 +104,7 @@
         <img src="../images/Airbnb_image.jpg" class="project-image">
         <div class="project-content">
           <h3>Airbnb Data Cleaning</h3>
-          <p>Data Cleaning and Preprocessing of Airbnb Reviews</p>
+          <p>Data Cleaning and Preprocessing of Airbnb Reviews.</p>
         </div>
       </div>
 
@@ -131,7 +131,7 @@
         <img src="../images/student_exam_performance.jpg" class="project-image">
         <div class="project-content">
           <h3>Students Exam Performance Prediction</h3>
-          <p>Predicts if a student will pass or fail based on demographic, behavioral, and academic features</p>
+          <p>Predicts if a student will pass or fail based on demographic, behavioral, and academic features.</p>
         </div>
       </div>
 
@@ -155,7 +155,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Kostanca Kovaci</p>
+    <p>© 2026 <span class="footer-name">Kostanca Kovaci</span>. All rights reserved.</p>
   </footer>
 
   <!-- Filtering Script -->
