--- a/projects/project1.html
+++ b/projects/project1.html
@@ -1100,14 +1100,13 @@
   <!-- Navigation -->
   <nav class="nav">
     <div class="nav-container">
-      <a href="../index.html" class="nav-back">
+      <a href="../index.html#project" class="nav-back">
         ← Back to Portfolio
       </a>
       <div class="nav-actions">
         <button id="theme-toggle" class="nav-btn" aria-label="Toggle Dark Mode">
           <span id="theme-icon">🌙</span>
         </button>
-        <a href="#" class="nav-btn">View Code</a>
         <a href="mailto:kovacikostanca@gmail.com" class="nav-btn primary">Get in Touch</a>
       </div>
     </div>
@@ -1449,7 +1448,7 @@
         <a href="https://github.com/kovacikostanca/Data-Science-Portfolio/blob/main/Gendered%20Perceptions%20of%20Places%20in%20LLMs/Gendered%20Perceptions%20of%20Places%20in%20LLMs.pdf" class="action-btn secondary">
           Download Case Study PDF
         </a>
-        <a href="../index.html" class="action-btn secondary">
+        <a href="../index.html#project" class="action-btn secondary">
           ← Back to Portfolio
         </a>
       </div>
