--- a/projects/project3.html
+++ b/projects/project3.html
@@ -1100,7 +1100,7 @@
   <!-- Navigation -->
   <nav class="nav">
     <div class="nav-container">
-      <a href="../index.html" class="nav-back">
+      <a href="../index.html#project" class="nav-back">
         ← Back to Portfolio
       </a>
       <div class="nav-actions">
@@ -1395,7 +1395,7 @@
         <a href="https://github.com/kovacikostanca/Data-Science-Portfolio/tree/main/Customer%20Churn%20Prediction" class="action-btn" target="_blank">
           View Code on GitHub
         </a>
-        <a href="../index.html" class="action-btn secondary">
+        <a href="../index.html#project" class="action-btn secondary">
           ← Back to Portfolio
         </a>
       </div>
