--- a/projects/project5.html
+++ b/projects/project5.html
@@ -612,7 +612,7 @@
   <!-- Navigation -->
   <nav class="nav">
     <div class="nav-container">
-      <a href="../index.html" class="nav-back">
+      <a href="../index.html#project" class="nav-back">
         ← Back to Portfolio
       </a>
       <div class="nav-actions">
@@ -1036,7 +1036,7 @@
         <a href="https://github.com/kovacikostanca/Data-Science-Portfolio/tree/main/E-commerce%20SQL%20Analysis" class="action-btn" target="_blank">
           View Code on GitHub
         </a>
-        <a href="../index.html" class="action-btn secondary">
+        <a href="../index.html#project" class="action-btn secondary">
           ← Back to Portfolio
         </a>
       </div>
