--- a/tutorials/all-tutorials.html
+++ b/tutorials/all-tutorials.html
@@ -52,7 +52,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Kostanca Kovaci</p>
+    <p>© 2026 <span class="footer-name">Kostanca Kovaci</span>. All rights reserved.</p>
   </footer>
 
   <!-- Filtering Script -->
