--- a/tutorials/all-tutorials.html
+++ b/tutorials/all-tutorials.html
@@ -27,7 +27,7 @@
   <!-- Page Header -->
   <section id="portfolio" style="padding-top: 120px;">
     <div class="section-header">
-      <h2>All Projects</h2>
+      <h2>All Tutorials</h2>
       <p>A complete collection of my data science & analytics work</p>
     </div>
 
@@ -80,3 +80,4 @@
 
 </body>
 </html>
+
