--- a/index.html
+++ b/index.html
@@ -476,35 +476,44 @@ I approach every project with curiosity, rigor, and creativity, ensuring that th
 
   <!-- Contact Section -->
   <section class="contact-section" id="contact">
-    <div class="container">
-      <div class="section-header">
-        <span class="section-tag">CONTACT</span>
-        <h2>Let's Connect</h2>
-      </div>
-      <div class="contact-content">
-        <div class="contact-image">
-          <img src="contact.png" alt="Contact">
-        </div>
-        <form class="contact-form" id="contactForm">
-          <div class="form-row">
-            <div class="form-group">
-              <input type="text" placeholder="Your Name" required>
-            </div>
-            <div class="form-group">
-              <input type="email" placeholder="Your Email" required>
-            </div>
-          </div>
-          <div class="form-group">
-            <input type="text" placeholder="Subject" required>
-          </div>
-          <div class="form-group">
-            <textarea placeholder="Your Message" rows="5" required></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">submit</button>
-        </form>
-      </div>
+  <div class="container">
+    <div class="section-header">
+      <span class="section-tag">CONTACT</span>
+      <h2>Let's Connect</h2>
     </div>
-  </section>
+    <div class="contact-content">
+      <div class="contact-image">
+        <img src="contact.png" alt="Contact">
+      </div>
+
+      <form class="contact-form" id="contactForm">
+        <div class="form-row">
+          <div class="form-group">
+            <input type="text" id="name" placeholder="Your Name" required>
+          </div>
+          <div class="form-group">
+            <input type="email" id="email" placeholder="Your Email" required>
+          </div>
+        </div>
+        <div class="form-group">
+          <input type="text" id="subject" placeholder="Subject" required>
+        </div>
+        <div class="form-group">
+          <textarea id="message" placeholder="Your Message" rows="5" required></textarea>
+        </div>
+
+        <div class="form-group">
+          <label for="fileInput" style="display: block; margin-bottom: 8px; color: #666;">
+            Attach a document (PDF, Word, JSON, etc.):
+          </label>
+          <input type="file" id="fileInput" accept=".pdf,.doc,.docx,.xls,.xlsx,.csv,.json">
+        </div>
+
+        <button type="submit" id="submitBtn" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
+  </div>
+</section>
 
   <!-- Footer -->
   <footer class="footer">
@@ -567,5 +576,72 @@ I approach every project with curiosity, rigor, and creativity, ensuring that th
 
 
   <script src="script_new.js"></script>
+
+  <script>
+  // 1. Paste your Google Web App URL here
+  const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwRYsSNlmuezCiNUCfJFb1sKbQWcjnSB7RJQF3969AMg3n8BBgrdJUnp1RDu2ZU1SiH/exec'; 
+
+  const contactForm = document.getElementById('contactForm');
+  const submitBtn = document.getElementById('submitBtn');
+
+  contactForm.addEventListener('submit', function(e) {
+    e.preventDefault();
+
+    // Change button state to show progress
+    submitBtn.disabled = true;
+    submitBtn.innerText = "Sending... Please wait";
+
+    const fileInput = document.getElementById('fileInput');
+    const file = fileInput.files[0];
+    
+    // Prepare the basic form data
+    const formData = {
+      name: document.getElementById('name').value,
+      email: document.getElementById('email').value,
+      subject: document.getElementById('subject').value,
+      message: document.getElementById('message').value
+    };
+
+    // Check if a file is attached
+    if (file) {
+      const reader = new FileReader();
+      
+      // Convert file to Base64 (so it can be sent as text)
+      reader.readAsDataURL(file);
+      reader.onload = function() {
+        formData.file = {
+          base64: reader.result.split(',')[1],
+          type: file.type,
+          name: file.name
+        };
+        sendToGoogle(formData);
+      };
+    } else {
+      // No file? Just send the text
+      sendToGoogle(formData);
+    }
+  });
+
+  function sendToGoogle(data) {
+    fetch(SCRIPT_URL, {
+      method: 'POST',
+      body: JSON.stringify(data)
+    })
+    .then(response => {
+      alert("Success! Your message and file have been sent.");
+      contactForm.reset();
+    })
+    .catch(error => {
+      alert("Ops! Something went wrong. Check the console for errors.");
+      console.error('Error:', error);
+    })
+    .finally(() => {
+      // Reset button state
+      submitBtn.disabled = false;
+      submitBtn.innerText = "Submit";
+    });
+  }
+</script>
+
 </body>
 </html>
