--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="top-bar-content">
         <div class="top-bar-info">
-          <a href="mailto:kostanca@example.com">✉ kovacikostanca@gmail.com</a>
+          <a href="mailto:kovacikostanca@gmail.com">✉ kovacikostanca@gmail.com</a>
           <!-- <a href="tel:+1234567890">📞 +123 456 7890</a> -->
         </div>
         <div class="theme-toggle">
@@ -510,6 +510,10 @@ I approach every project with curiosity, rigor, and creativity, ensuring that th
         </div>
 
         <button type="submit" id="submitBtn" class="btn btn-primary">Submit</button>
+
+        <p id="formStatus" style="display:none; color: green; margin-top: 10px; font-weight: bold;">
+            Success! I'll get back to you soon.
+        </p>
       </form>
     </div>
   </div>
@@ -619,7 +623,6 @@ I approach every project with curiosity, rigor, and creativity, ensuring that th
 
   function sendToGoogleNow(data) {
   // We convert the data to a URL-encoded string which Google Script handles more easily
-  const blob = new Blob([JSON.stringify(data)], {type : 'application/json'});
   
   fetch(MY_SCRIPT_URL, {
     method: 'POST',
@@ -628,8 +631,9 @@ I approach every project with curiosity, rigor, and creativity, ensuring that th
     cache: 'no-cache'
   })
   .then(() => {
-    alert("Success! Your message has been sent.");
+    document.getElementById('formStatus').style.display = 'block'; // Show success message
     myPortfolioForm.reset();
+    setTimeout(() => { document.getElementById('formStatus').style.display = 'none'; }, 5000); // Hide after 5 seconds
   })
   .catch(error => {
     console.error('Error:', error);
