--- a/index.html
+++ b/index.html
@@ -578,58 +578,66 @@ I approach every project with curiosity, rigor, and creativity, ensuring that th
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
-
   <script src="script_new.js"></script>
 
   <script>
-  const contactForm = document.getElementById('contactForm');
-  const submitBtn = document.getElementById('submitBtn');
-  const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwbB7XjCKoUpnNuGPpPJd_GtXSYTUMeyuqNHxi_FVrsMDCxiLs5N9JpnaEzzc1u3Abc1Q/exec'; // <--- PASTE IT HERE
+  // Using unique names to avoid the "already been declared" error
+  const contactForm_gs = document.getElementById('contactForm');
+  const submitBtn_gs = document.getElementById('submitBtn');
+  const SCRIPT_URL_gs = 'https://script.google.com/macros/s/AKfycbwbB7XjCKoUpnNuGPpPJd_GtXSYTUMeyuqNHxi_FVrsMDCxiLs5N9JpnaEzzc1u3Abc1Q/exec'; 
 
-  contactForm.addEventListener('submit', function(e) {
-    e.preventDefault();
-    submitBtn.disabled = true;
-    submitBtn.innerText = "Sending...";
+  if (contactForm_gs) {
+    contactForm_gs.addEventListener('submit', function(e) {
+      e.preventDefault();
+      
+      // Change button state
+      submitBtn_gs.disabled = true;
+      submitBtn_gs.innerText = "Sending... Please wait";
 
-    const fileInput = document.getElementById('fileInput');
-    const file = fileInput.files[0];
-    const formData = {
-      name: document.getElementById('name').value,
-      email: document.getElementById('email').value,
-      subject: document.getElementById('subject').value,
-      message: document.getElementById('message').value
-    };
-
-    if (file) {
-      const reader = new FileReader();
-      reader.readAsDataURL(file);
-      reader.onload = function() {
-        formData.file = {
-          base64: reader.result.split(',')[1],
-          type: file.type,
-          name: file.name
-        };
-        sendData(formData);
+      const fileInput_gs = document.getElementById('fileInput');
+      const file_gs = fileInput_gs.files[0];
+      
+      const formData_gs = {
+        name: document.getElementById('name').value,
+        email: document.getElementById('email').value,
+        subject: document.getElementById('subject').value,
+        message: document.getElementById('message').value
       };
-    } else {
-      sendData(formData);
-    }
-  });
 
-  function sendData(data) {
-    fetch(SCRIPT_URL, {
+      if (file_gs) {
+        const reader_gs = new FileReader();
+        reader_gs.readAsDataURL(file_gs);
+        reader_gs.onload = function() {
+          formData_gs.file = {
+            base64: reader_gs.result.split(',')[1],
+            type: file_gs.type,
+            name: file_gs.name
+          };
+          executeMailSend(formData_gs);
+        };
+      } else {
+        executeMailSend(formData_gs);
+      }
+    });
+  }
+
+  function executeMailSend(data) {
+    fetch(SCRIPT_URL_gs, {
       method: 'POST',
-      mode: 'no-cors',
+      mode: 'no-cors', // Bypasses CORS issues
       body: JSON.stringify(data)
     })
     .then(() => {
-      alert("Message sent successfully!");
-      contactForm.reset();
+      alert("Success! Your message has been sent.");
+      contactForm_gs.reset();
     })
-    .catch(() => alert("Error sending message."))
+    .catch(error => {
+      console.error('Error:', error);
+      alert("Oops! Something went wrong.");
+    })
     .finally(() => {
-      submitBtn.disabled = false;
-      submitBtn.innerText = "Submit";
+      submitBtn_gs.disabled = false;
+      submitBtn_gs.innerText = "Submit";
     });
   }
 </script>
