--- a/index.html
+++ b/index.html
@@ -624,7 +624,10 @@ I approach every project with curiosity, rigor, and creativity, ensuring that th
   function executeMailSend(data) {
     fetch(SCRIPT_URL_gs, {
       method: 'POST',
-      mode: 'no-cors', // Bypasses CORS issues
+      mode: 'no-cors', 
+      headers: {
+        'Content-Type': 'text/plain' // Change this to text/plain for no-cors
+      },
       body: JSON.stringify(data)
     })
     .then(() => {
