--- a/index.html
+++ b/index.html
@@ -581,69 +581,44 @@ I approach every project with curiosity, rigor, and creativity, ensuring that th
   <script src="script_new.js"></script>
 
   <script>
-  // Using unique names to avoid the "already been declared" error
-  const contactForm_gs = document.getElementById('contactForm');
-  const submitBtn_gs = document.getElementById('submitBtn');
-  const SCRIPT_URL_gs = 'https://script.google.com/macros/s/AKfycbwbB7XjCKoUpnNuGPpPJd_GtXSYTUMeyuqNHxi_FVrsMDCxiLs5N9JpnaEzzc1u3Abc1Q/exec'; 
+document.getElementById("contactForm").addEventListener("submit", function(e) {
+  e.preventDefault();
 
-  if (contactForm_gs) {
-    contactForm_gs.addEventListener('submit', function(e) {
-      e.preventDefault();
-      
-      // Change button state
-      submitBtn_gs.disabled = true;
-      submitBtn_gs.innerText = "Sending... Please wait";
+  const submitBtn = document.getElementById("submitBtn");
+  const status = document.getElementById("formStatus");
 
-      const fileInput_gs = document.getElementById('fileInput');
-      const file_gs = fileInput_gs.files[0];
-      
-      const formData_gs = {
-        name: document.getElementById('name').value,
-        email: document.getElementById('email').value,
-        subject: document.getElementById('subject').value,
-        message: document.getElementById('message').value
-      };
+  submitBtn.disabled = true;
+  submitBtn.textContent = "Sending...";
 
-      if (file_gs) {
-        const reader_gs = new FileReader();
-        reader_gs.readAsDataURL(file_gs);
-        reader_gs.onload = function() {
-          formData_gs.file = {
-            base64: reader_gs.result.split(',')[1],
-            type: file_gs.type,
-            name: file_gs.name
-          };
-          executeMailSend(formData_gs);
-        };
-      } else {
-        executeMailSend(formData_gs);
-      }
-    });
-  }
+  const data = {
+    name: document.getElementById("name").value,
+    email: document.getElementById("email").value,
+    subject: document.getElementById("subject").value,
+    message: document.getElementById("message").value
+  };
 
-  function executeMailSend(data) {
-    fetch(SCRIPT_URL_gs, {
-      method: 'POST',
-      mode: 'no-cors', 
-      headers: {
-        'Content-Type': 'text/plain' // Change this to text/plain for no-cors
-      },
-      body: JSON.stringify(data)
-    })
-    .then(() => {
-      alert("Success! Your message has been sent.");
-      contactForm_gs.reset();
-    })
-    .catch(error => {
-      console.error('Error:', error);
-      alert("Oops! Something went wrong.");
-    })
-    .finally(() => {
-      submitBtn_gs.disabled = false;
-      submitBtn_gs.innerText = "Submit";
-    });
-  }
+  fetch("https://script.google.com/macros/s/AKfycbybFLJWfWLA2T0ThJkR5ZYSbqRGbkD-Yx-BhB1X1PdU3dPDLK9jlECX2C4zAB3iY5TgbA/exec", {
+    method: "POST",
+    body: JSON.stringify(data),
+    headers: { "Content-Type": "application/json" }
+  })
+  .then(res => res.json())
+  .then(response => {
+    if (response.success) {
+      status.style.display = "block";
+      document.getElementById("contactForm").reset();
+    } else {
+      alert("Something went wrong.");
+    }
+  })
+  .catch(() => alert("Error sending message"))
+  .finally(() => {
+    submitBtn.disabled = false;
+    submitBtn.textContent = "Submit";
+  });
+});
 </script>
+
 
 </body>
 </html>
